@@ -325,9 +325,9 @@ class Request(dict, HeadersMixin):
     @asyncio.coroutine
     def json(self, *, loads=json.loads, loader=None):
         """Return BODY as JSON."""
-        if loader:
+        if loader is not None:
             warnings.warn(
-                'Using `loader` is deprecated, use `loads` instead',
+                "Using loader argument is deprecated, use loads instead",
                 DeprecationWarning)
             loads = loader
         body = yield from self.text()
