@@ -70,3 +70,5 @@ CHANGES
 - Add test for default Expect handler #601
 
 - Add the first demo project
+
+- Rename `loader` keyword argument in `web.Request.json` method. #646
